Allow autoplay on videos

--- a/roles/configure-device/templates/kiosk.j2
+++ b/roles/configure-device/templates/kiosk.j2
@@ -6,4 +6,4 @@ xset s off     # disable screen saver
 xset s noblank # don't blank the video device
 matchbox-window-manager -use_titlebar no &
 unclutter &    # hide X mouse cursor unless mouse activated
-chromium-browser --display=:0 --kiosk --incognito --window-position=0,0 {{ device_url }}
+chromium-browser --display=:0 --kiosk --incognito --autoplay-policy=no-user-gesture-required --window-position=0,0 {{ device_url }}
